syntax = "proto3";

option csharp_namespace = "NS.Carrinho.API.Services.gRPC";

package CarrinhoAPI;

service ShoppingCart {
	rpc GetCart(GetCartRequest) returns (ClientCartResponse) {}	
}

message GetCartRequest {

} 

message ClientCartResponse {
	string id = 1;
	string clientid  = 2;
	double valuetotal = 3;
	repeated ItemCartResponse items = 4;
	bool voucherused = 5;
	double discount = 6;
	VoucherResponse voucher = 7;
}

message ItemCartResponse {
	string id = 1;
	string productid = 2;
	string name  = 3;
	int32 quantity = 4;
	double value  = 5;
	string image  = 6;
}

message VoucherResponse {
	double percentage = 1;
	double valuediscount = 2;
	string code = 3;
	int32 typediscount = 4;
}